--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Kwitter</title>
+	<title>Lets Chat</title>
 <meta name=" vievport" contents="width=device-width,  initian-scale=1"
 
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,14 +16,14 @@
 <body>
 <center>
 	<h1 class="header">	
-		Kwitter	<sup>
+		Lets Chat	<sup>
 	<img src="massege.jpeg">
 	</sup>
 </h1>
 	<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
 	<img src="kwitter.png" class="logo">
 		<h3 >See what is happening in the world right now</h3>
-		<h4 >Join Kwitter today</h4>
+		<h4 >Join Lets Chat today</h4>
 		<div class="form-group">
 		  <label >User Name:</label>
 		  <input type="text" id="user_name" class="form-control" placeholder="User Name">
